[gd_scene load_steps=8 format=3 uid="uid://dg7gq7iqhvvsy"]

[ext_resource type="Script" path="res://Troops/BaseTroop/BaseTroop.gd" id="1_auj8v"]
[ext_resource type="Texture2D" uid="uid://bymy22enxyaak" path="res://Art/andrew_is_ugly.png" id="2_oya3o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_35c87"]
radius = 15.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdt6x"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_i55or"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_anq51"]
resource_name = "Soldier_Attacking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, 0.785398, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vuk6q"]
_data = {
"RESET": SubResource("Animation_i55or"),
"Soldier_Attacking": SubResource("Animation_anq51")
}

[node name="BaseTroop" type="CharacterBody2D"]
script = ExtResource("1_auj8v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oya3o")

[node name="Attack Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Range"]
shape = SubResource("CircleShape2D_35c87")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["soldier"]]
shape = SubResource("CapsuleShape2D_gdt6x")

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vuk6q")
}

[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
